<resources>
    <string name="app_name">VeriParkApp</string>
    <string name="imkb_hisse_senetleri_endeksler">IMKB Hisse Senetleri/Endeksler</string>
    <string name="title_activity_stocks">StocksActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_about">About</string>

    <string name="menu_home">Hisse ve Endeksler</string>
    <string name="menu_gallery">Yükselenler</string>
    <string name="menu_slideshow">Düşenler</string>
    <string name="veri_park">Veri Park</string>
    <string name="fragment_hacme_gore30">Hacme Göre - 30</string>
    <string name="fragment_hacme_gore50">Hacme Göre - 50</string>
    <string name="fragment_hacme_gore100">Hacme Göre - 100</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>