<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/hacmeGore30Fragment"
            android:title="@string/fragment_hacme_gore30" />
        <item
            android:id="@+id/hacmeGore50Fragment"
            android:title="@string/fragment_hacme_gore50" />
        <item
            android:id="@+id/hacmeGore100Fragment"
            android:title="@string/fragment_hacme_gore100" />
    </group>
</menu>